# Casals

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md  casals_backend.did  casals_cli.py  icp.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cli-e2e.yml  deploy-ic.yml  integration.yml  orchestration-integration.yml  release.yml
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.css  app.d.ts
frontend/static/: .ic-assets.json5
scripts/: _gen_test_arrangement.py  build_orchestration_templates.sh  build_templates.sh  casals.py  deploy_realms_casals.sh  embed_cycle_sweep_wasm.py  seed.py  wire_offchain_monitor.py
seed/: mainnet.json  templates.json
seed/arrangements/: demo.json  test-lite.json  test.json
seed/assets/: index.html
seed/sheets/: demo.json
src/: arrangement.py  arrangement_helpers.py  audit.py  auth.py  commanders.py  cycle_sweep.py  cycle_sweep_wasm.py  cycles.py  default_sheet.py  governance_requests.py  helpers.py  lifecycle.py  main.py  models.py  orchestration_bridge.py  orchestration_governance.py  pool.py  services.py  sheet.py  subnets.py  util.py  views.py  wasm_helpers.py  wasm_types.py
templates/: .gitignore
templates/cycles-sweep-rust/: Cargo.toml  cycles_sweep_rust.did
templates/hello-world-basilisk/: hello_world_basilisk.did  main.py
templates/hello-world-motoko/: hello_world_motoko.did  icp.yaml  (+1 more)
tests/: conftest.py  test_cli_e2e.py  test_cli_integration.py  test_cli_unit.py  test_e2e.py  test_integration.py  test_unit.py  test_wasm_types.py
(+66 files in other folders)
